2010-05-04 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: changed the style to show data in the
	items "TTRT", "TTO", "MTBF" and "MTTR".

2010-05-04 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: fixed in the function
	"get_agentmodule_data_average" prevent to use the var without value.

2010-05-04  Sergio Martin  <sergio.martin@artica.es>

	* include/functions_reporting.php: Added the 
	high variation for the graphs when the
	parameter $mini is true

2010-05-04 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.preview.php: added file to show the
	html preview of report.

	* godmode/reporting/reporting_builder.php: added the tab for the preview.

2010-05-04  Sergio Martin  <sergio.martin@artica.es>

	* godmode/db/db_audit.php
	godmode/db/db_sanity.php
	godmode/db/db_refine.php
	godmode/db/db_info.php
	godmode/db/db_event.php
	godmode/db/db_purge.php: Fixed the screens
	without headers for bug: 2996488

2010-05-04 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.item_editor.php: added tooltip for to
	tell what is the separator character in the header.

2010-05-04  Sergio Martin  <sergio.martin@artica.es>

	* include/functions_reporting.php: Added "mini"
	parameter. Usefull for print the report with less
	size

2010-05-04  Sergio Martin  <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php: 
	Increased the max number of digits in text inputs 
	for max_critical, min_critical, max_warning and
	min_warning for bug:2931191

2010-05-03 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/reporting/reporting_xml.php:  added default value "now" in
	$report["datetime"]. Removed (as comment at the momment) obsolet report
	items, and added the items: "event_report_agent", "text", "sql",
	"event_report_module", "alert_report_module", "alert_report_agent",
	"url", "database_serialized", "TTRT", "TTO", "MTBF" and "MTTR". 
