@@ -1,3 +1,8 @@
+2010-05-04  Sergio Martin  <sergio.martin@artica.es>
+
+	* include/functions_reporting.php: Set style to
+	'mini' option.
+
 2010-05-04 Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/functions_reporting.php: changed the style to show data in the
